gcc/testsuite/rust/rustc/ui/parser/issue-5544-b.rs
fn main() {
    let __isize = 0xffff_ffff_ffff_ffff_ffff_ffff_ffff_ffff_ff;
// { dg-error "" "" { target *-*-* } .-1 }
}

